# demo

./: pyproject.toml
.github/workflows/: demo-confirm-effective.yml  demo-get-mfa.yml  demo-payment-ddd.yml  demo-request-hundred.yml  demo-temp-email.yml
demo-confirm-effective/: env.py  main.py  pyproject.toml
demo-get-mfa/: env.py  main.py  pyproject.toml
demo-payment-ddd/: env.py  main.py  pyproject.toml
demo-request-hundred/: data.py  env.py  format_sources.py  main.py  pyproject.toml  start_new_chat.py  stream_chat_response.py
demo-temp-email/: main.py
