[project]
name = "demo-get-mfa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "environs>=15.0.1",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.12",
    "pyotp>=2.9.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
